# TCP

GObject_Signal/: CMakeLists.txt  main.c  signal-demo.c  signal-demo.h
TCP/: CMakeLists.txt  Server.cpp  Server.h  main.c  wrapper.cpp  wrapper.h
TCPClient/: CMakeLists.txt  Client.cpp  Client.h  RawTransport.cpp  main.cpp
testTCP/: CMakeLists.txt  RawTransport.cpp  RawTransport.h  Server.cpp  Server.h  main.cpp
